# cpp-awslambda-test

./: CMakeLists.txt  Dockerfile  README.md  main.cpp
